--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dashboard</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="shortcut icon" type="image/svg" href="./img/ico.svg"/>
 </head>
 
 <body>
