--- a/maps.html
+++ b/maps.html
@@ -15,17 +15,11 @@
     <div class="container">
         <div class="top-info"></div>
         <div class="content">
-            <div class="box left">
-                <div id="map"></div>
-            </div>
-            <div class="right">
-                <div class="box up"></div>
-                <div class="box down"></div>
-            </div>
+            <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+            <div id="map"></div>
         </div>
         <div class="down-info"></div>
     </div>
-
     <script type="text/javascript" src="./js/maps.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMbjrbz3_vD4WlWPZj7KMVP2FdlhYHJDo&libraries=places&callback=initAutocomplete"
