--- a/phone.html
+++ b/phone.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dashboard</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
 </head>
 
@@ -15,22 +14,12 @@
     <div class="container">
         <div class="top-info"></div>
         <div class="content">
-            <div class="box left">
-                <div id="map"></div>
-            </div>
-            <div class="right">
-                <div class="box up"></div>
-                <div class="box down"></div>
-
-            </div>
+            <div style="background-color: black;" class="right"></div>
         </div>
         <div class="down-info"></div>
     </div>
 
-    <script type="text/javascript" src="./js/maps.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
-        async defer></script>
+
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
