--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="container">
-        <div class="top-info"></div>
+        <div class="top-info">
+            <div class="info">
+                <p id="hours"></p>
+                <p id="date"></p>
+                <p id="temperature"></p>
+            </div>
+
+            <div class="info">
+
+            </div>
+
+            <div></div>
+        </div>
         <div class="content">
             <div class="box left">
                 <div id="map"></div>
