--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,16 +18,20 @@
     <div class="container">
         <div class="top-info">
             <div class="info">
-                <p id="hours"></p>
-                <p id="date"></p>
-                <p id="temperature"></p>
+                <p id="hours" style="font-weight: bold;">19:20</p>
+                <p id="date" class="opacity-letters">Friday, 5 May 2020</p>
+                <p id="temperature" style="font-weight: bold;">22</p>
+                <p style="margin-left: 0;"" class=" opacity-letters">ºC</p>
             </div>
 
-            <div class="info">
-
+            <div class="info" style="justify-content: flex-end;">
+                <p id="music">RFM</p>
+                <div style="display: flex; align-items: center;">
+                    <img src="./img/wrench.png" width="50px" alt="Wrench">
+                </div>
             </div>
 
-            <div></div>
+
         </div>
         <div class="content">
             <div class="box left">
@@ -37,7 +43,11 @@
 
             </div>
         </div>
-        <div class="down-info"></div>
+        <div class="down-info">
+            <div class="air-conditioner"></div>
+            <div class="navbar"></div>
+            <div class="heated-seats"></div>
+        </div>
     </div>
 
     <script type="text/javascript" src="./js/maps.js"></script>
