Fix main() and box background

--- a/index.html
+++ b/index.html
@@ -38,14 +38,22 @@
                 <div id="map"></div>
             </div>
             <div class="right">
-                <div class="box up"></div>
+                <div class="box up" style="display: flex;flex-direction: column-reverse;">
+                    <div class="music-controls" id="m-controls"></div>
+                </div>
                 <div class="box down"></div>
 
             </div>
         </div>
         <div class="down-info">
-            <div class="air-conditioner"></div>
+            <div class="air-conditioner">
+                <div class="air-box">
+
+                </div>
+            </div>
+            <div class="v-line"></div>
             <div class="navbar"></div>
+            <div class="v-line"></div>
             <div class="heated-seats"></div>
         </div>
     </div>
