--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
+        
 </head>
 
 <body onresize="airResize()">
@@ -59,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content">
+            <div id="swup" class="content transition-fade">
                 <div class="box left">
                     <div id="map"></div>
                 </div>
@@ -188,7 +190,7 @@
 
         </div>
     </div>
-
+    <script>const swup = new Swup(); // only this line when included with script tag</script>
     <script type="text/javascript" src="./js/maps.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
