--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
-        
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
+
 </head>
 
 <body onresize="airResize()">
@@ -47,12 +47,14 @@
                         <p class="big-weather">22ºC</p>
                         <p class="little-weather">inside</p>
                     </div>
-                    <div style="width: 100%;height: 10%;display: flex; justify-content: space-around; align-items: center;">
+                    <div
+                        style="width: 100%;height: 10%;display: flex; justify-content: space-around; align-items: center;">
                         <div class="air-button"></div>
                         <div class="air-button" style="width: 25%;height: 80%;"></div>
                         <div class="air-button"></div>
                     </div>
-                    <div style="width: 100%; height:50%; display: flex; align-items: center; justify-content: space-around;">
+                    <div
+                        style="width: 100%; height:50%; display: flex; align-items: center; justify-content: space-around;">
                         <div class="air-mini-button"></div>
                         <div class="air-button" style="transform: rotate(90deg); width: 30%; height: 20%;"></div>
                         <img src=" ./img/tesla-side.png" height="80%" alt="Car">
@@ -138,7 +140,7 @@
                         <img src="./img/down-info/home.svg" width="40px" alt="Home">
                         <p class="app-name">Home</p>
                     </div>
-                    <a href="./phone.html">
+                    <a href="./phone.html" class="transition-fade">
                         <div class="menu">
                             <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
                             <p class="app-name">Phone</p>
@@ -190,7 +192,9 @@
 
         </div>
     </div>
-    <script>const swup = new Swup(); // only this line when included with script tag</script>
+    <script>
+        let options = { LINK_SELECTOR: 'a', debugMode: true, };
+        const swup = new Swup(options); // only this line when included with script tag</script>
     <script type="text/javascript" src="./js/maps.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
