--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
 
 </head>
 
@@ -192,9 +191,13 @@
 
         </div>
     </div>
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
     <script>
-        let options = { LINK_SELECTOR: 'a', debugMode: true, };
-        const swup = new Swup(options); // only this line when included with script tag</script>
+        let options = {
+            LINK_SELECTOR: 'a',
+            debugMode: true,
+        };
+        var swup = new Swup(options);</script>
     <script type="text/javascript" src="./js/maps.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
