SWUP WORKING CARALHOOOO

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     </div>
                 </div>
             </div>
+
             <div id="swup" class="content transition-fade">
                 <div class="box left">
                     <div id="map"></div>
@@ -139,7 +140,7 @@
                         <img src="./img/down-info/home.svg" width="40px" alt="Home">
                         <p class="app-name">Home</p>
                     </div>
-                    <a href="./phone.html" class="transition-fade">
+                    <a href="/phone.html" class="transition-fade">
                         <div class="menu">
                             <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
                             <p class="app-name">Phone</p>
@@ -186,18 +187,13 @@
                     <p class="app-name" style="margin-top:6%">Heated Seats</p>
                 </div>
 
+
             </div>
 
 
         </div>
     </div>
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
-    <script>
-        let options = {
-            LINK_SELECTOR: 'a',
-            debugMode: true,
-        };
-        var swup = new Swup(options);</script>
     <script type="text/javascript" src="./js/maps.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
