--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <img src="./img/down-info/home.svg" width="40px" alt="Home">
                         <p class="app-name">Home</p>
                     </div>
-                    <a href="/phone.html" class="transition-fade">
+                    <a href="/phone" class="transition-fade">
                         <div class="menu">
                             <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
                             <p class="app-name">Phone</p>
