--- a/phone.html
+++ b/phone.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div style="width: 60%;" class="right">
-                <div class="letterpad">
+                <div id="phone" class="letterpad">
                     <div class="row">
                         <div style="border-top-left-radius: 5%;" class="button">A</div>
                         <div class="button">B</div>
@@ -100,7 +100,8 @@
         </div>
         <div class="down-info"></div>
     </div>
-    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
+    <script src="./node_modules/swup/dist/swup.min.js"></script>
+    <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
     <script type="text/javascript" src="./js/phone.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
