--- a/index.html
+++ b/index.html
@@ -36,21 +36,27 @@
         </div>
         <div class="air-modal">
             <div class="air-flex">
-                <div style="display: flex; justify-content: space-between; width: 100%;">
-                    <div style="width:57%; text-align: right;"">
+                <div style="width: 100%;">
+                    <div style="display: flex; justify-content: space-between; width: 100%;">
+                        <div style="width:57%; text-align: right;"">
                         <h1>A/C</h1>
                     </div>
                     <img src=" ./img/down-info/air/close.svg"width="40px" alt="Wrench">
-                    </div>
-                    <div style="text-align: center;">
-                        <p class="big-weather">22ºC</p>
-                        <p class="little-weather">inside</p>
+                        </div>
+                        <div style="text-align: center;">
+                            <p class="big-weather">22ºC</p>
+                            <p class="little-weather">inside</p>
+                        </div>
                     </div>
                     <div
                         style="width: 100%;height: 10%;display: flex; justify-content: space-around; align-items: center;">
-                        <div class="air-button"></div>
-                        <div class="air-button" style="width: 25%;height: 80%;"></div>
-                        <div class="air-button"></div>
+                        <div class="air-button">OFF</div>
+                        <div
+                            style="display: flex; flex-direction: column;width: 25%;height: 160%; align-items: center; justify-content: flex-start;">
+                            <img src=" ./img/down-info/air/fan.svg" width="25px" style="margin-bottom: 5%;" alt="Fan">
+                            <div class="air-button" style="width: 100%;height: 50%;"></div>
+                        </div>
+                        <div class="air-button">AUTO</div>
                     </div>
                     <div
                         style="width: 100%; height:50%; display: flex; align-items: center; justify-content: space-around;">
@@ -189,7 +195,7 @@
                                 alt="Passenger Seat">
                         </div>
                     </div>
-                    <p class="app-name" style="margin-top:6%">Heated Seats</p>
+                    <p class="app-name" style="margin-top:3.5%">Heated Seats</p>
                 </div>
 
 
