Testes com animações e outras informações car info

--- a/index.html
+++ b/index.html
@@ -159,10 +159,12 @@
                         <p class="app-name">Audio</p>
                     </div>
 
-                    <div class="menu">
-                        <img src="./img/down-info/tesla.png" width="105px" alt="Car">
-                        <p class="app-name">Car Info</p>
-                    </div>
+                    <a href="./car.html" class="transition-fade">
+                        <div class="menu">
+                            <img src="./img/down-info/tesla.png" width="105px" alt="Car">
+                            <p class="app-name">Car Info</p>
+                        </div>
+                    </a>
 
                     <div class="menu">
                         <img src="./img/down-info/door.svg" width="40px" alt="Car">
@@ -204,6 +206,8 @@
 
         </div>
     </div>
+    <script src="node_modules/progressbar.js/dist/progressbar.js"></script>
+    <script src="node_modules/progressbar.js/dist/progressbar.min.js"></script>
     <script src="./node_modules/swup/dist/swup.min.js"></script>
     <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
 
