--- a/car.html
+++ b/car.html
@@ -71,14 +71,37 @@
             <div id="swup" class="content transition-fade"
                 style="flex-direction: column; justify-content: space-evenly; align-items: center;">
                 <div style="height: 50%; display: flex; justify-content: center; align-items: flex-end;">
-                    <img src=" ./img/car/tesla-side.png" width="65%" alt="Car">
+                    <div style="width: 65%;" class="car">
+                        <img src=" ./img/car/tesla-side.png" width="100%" alt="Car">
+                        <!-- <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 706.5px;" alt="Wheel">
+                        <img src=" ./img/car/tesla-wheel.png" width="100px" class="wheel" style="position: absolute; top: 332px;right: 1133px;" alt="Wheel">
+                        -->
+                    </div>
                 </div>
 
                 <div id="car" style="display: flex; justify-content: space-evenly; width: 100%; height: 50%;">
-                    <div id="circle1" class="circle" style="background-image: url('./img/car/oil.svg'); background-position: center; background-size: 55%; background-repeat: no-repeat;height: 80%;">
+                    <div id="circle1" class="circle"
+                        style="background-image: url('./img/car/oil.svg'); background-position: center; background-size: 55%; background-repeat: no-repeat;height: 80%;">
                     </div>
-                    <div style="width: 40%; height: 100%;"></div>
-                    <div id="circle2" class="circle" style="background-image: url('./img/car/fuel.svg'); background-position: center; background-size: 40%; background-repeat: no-repeat;height: 80%;"></div>
+                    <div
+                        style="width: 40%; height: 100%; display: flex; flex-direction: column-reverse; align-items: center; justify-content: space-between;">
+                        <div style="display: flex;">
+                            <p id="temperature" style="font-weight: bold;">78.000</p>
+                            <p style="margin-left: 2px; display: flex; align-items: center;" class=" opacity-letters">km
+                            </p>
+                        </div>
+                        <div style="width: 100%; height: 50%;">
+                            <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;" onclick="tirePressure()">
+                            <div style="background-color: #01042A; width: 15%; height: 50%; border-radius: 100%; display: flex; justify-content: center; align-items: center; box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.1)">
+                                <img src="./img/car/pressure.svg" width="50%" alt="Pressure">
+                            </div>
+                            <p  class="little-weather" style="margin-top: 0.4rem;">Tire Pressure</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div id="circle2" class="circle"
+                        style="background-image: url('./img/car/fuel.svg'); background-position: center; background-size: 40%; background-repeat: no-repeat;height: 80%;">
+                    </div>
                 </div>
             </div>
             <div class="down-info">
@@ -156,6 +179,10 @@
     <script src="node_modules/progressbar.js/dist/progressbar.min.js"></script>
     <script src="./node_modules/swup/dist/swup.min.js"></script>
     <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
+        async defer></script>
+    <script type="text/javascript" src="./js/maps.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
