--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="air-modal">
             <div class="air-flex">
-                <div style="width: 100%;">
-                    <div style="display: flex; justify-content: space-between; width: 100%;">
+                <div style="width: 100%; height: 25%;">
+                    <div style="display: flex; justify-content: space-between; width: 100%; align-items: flex-start;">
                         <div style="width:57%; text-align: right;"">
                         <h1>A/C</h1>
                     </div>
