Bancos corrigidos, resolução de bug na geoloc, resolução bug maps do car

--- a/maps.html
+++ b/maps.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="top-info"></div>
         <div id="swup" class="content transition-fade">
-            <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+            <input id="pac-input" class="controls" type="text" style="border-radius: 5% / 20%; outline: none; border: 0px;" placeholder="Search Box">
             <div id="map"></div>
         </div>
         <div class="down-info"></div>
