--- a/car.html
+++ b/car.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dashboard</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -91,12 +92,13 @@
                             </p>
                         </div>
                         <div style="width: 100%; height: 50%;">
-                            <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;" onclick="tirePressure()">
-                            <div style="background-color: #01042A; width: 15%; height: 50%; border-radius: 100%; display: flex; justify-content: center; align-items: center; box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.1)">
-                                <img src="./img/car/pressure.svg" width="50%" alt="Pressure">
+                            <div style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
+                                onclick="tirePressure()">
+                                <div class="button-pressure">
+                                    <img src="./img/car/pressure.svg" width="50%" alt="Pressure">
+                                </div>
+                                <p class="little-weather" style="margin-top: 0.4rem;">Tire Pressure</p>
                             </div>
-                            <p  class="little-weather" style="margin-top: 0.4rem;">Tire Pressure</p>
-                        </div>
                         </div>
                     </div>
                     <div id="circle2" class="circle"
@@ -179,6 +181,7 @@
     <script src="node_modules/progressbar.js/dist/progressbar.min.js"></script>
     <script src="./node_modules/swup/dist/swup.min.js"></script>
     <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
+
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
         async defer></script>
