--- a/car.html
+++ b/car.html
@@ -72,7 +72,7 @@
             <div id="swup" class="content transition-fade">
                 <div class="tire" style="width: 100%; height: 100%; display: none; flex-direction: column;">
                     <div style="height:15%; width:100%; display: flex; justify-content: center;">
-                        <div class="button-pressure" style="height: 77%; width: 5.5%; display: flex; justify-content: center; align-items: center;">
+                        <div class="button-pressure" style="height: 77%; width: 5.5%; display: flex; justify-content: center; align-items: center; margin-right: 1%;">
                             <img onclick="tirePressure()" src="./img/car/back.svg" width="65%" style="padding-right: 7.5%;" alt="Back">
                         </div>
                     </div>
