--- a/music.html
+++ b/music.html
@@ -101,16 +101,16 @@
 
                     </div>
 
-                    <div id="swup" class="content transition-fade">
-                        <div class="box left">
-                            <div id="map"></div>
-                        </div>
-                        <div class="right">
-                            <div class="box up">
+                    <div id="swup" class="content transition-fade"
+                        style="flex-direction: column ; align-items: center;">
+                        <div style="height: 50%; width: 100%;"></div>
+                        <div
+                            style="display: flex; flex-direction: column; justify-content: flex-end; height: 50%; width: 100%; align-items: center">
+                            <div class="box" style="height: 95%; width: 50%; ">
                                 <div class="music" style="display: flex;">
-                                    <div class="music-controls" id="m-controls">
+                                    <div class="music-controls" id="m-controls" style="width: 93%">
                                         <div
-                                            style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
+                                            style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 48%; height: 90%;">
                                             <div style="text-align: center;">
                                                 <p id="artist">RFM</p>
                                                 <p id="music">Popcorn Time</p>
@@ -129,54 +129,19 @@
                                         </div>
 
                                     </div>
+                                    <div class="slidecontainer"
+                                        style="width: 7%; display: flex;  flex-direction: column; justify-content: space-between; align-items: center;">
+                                        <img src="./img/music/controls/sound.svg" width="100%" height="20%">
+                                        <div style="height: 80%;">
+                                            <input type="range" min="1" max="100" value="50" class="slider"
+                                                id="myRange">
+                                        </div>
+                                    </div>
+
 
                                 </div>
-                            </div>
-                            <div class="box down" style="display: flex;flex-direction: column;">
-                                <h4 style="margin:0;">Weather</h4>
-                                <div id="index" class="weather">
-                                    <div class="weather-info">
-                                        <img id="image-weather" src="./img/weather/w/sun.svg" width="60px"
-                                            alt="Weather">
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather"><span id="weather">Sun</span></p>
-                                            <p class="little-weather">weather</p>
-                                        </div>
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather"><span id="wind">5</span><span
-                                                    style="font-size: x-small;">km/h</span></p>
-                                            <p class="little-weather">wind</p>
-                                        </div>
-                                    </div>
-                                    <div class="weather-info">
-                                        <img src="./img/weather/term.svg" width="60px" alt="Temperature">
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather">20<span style="font-size: x-small;">ºC</span></p>
-                                            <p class="little-weather">inside</p>
-                                        </div>
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather"><span id="temperature2">22</span><span
-                                                    style="font-size: x-small;">ºC</span></p>
-                                            <p class="little-weather">outside</p>
-                                        </div>
-                                    </div>
-                                    <div class="weather-info">
-                                        <img src="./img/weather/watering.svg" width="60px" alt="Temperature">
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather"><span id="precipitacion">15</span><span
-                                                    style="font-size: x-small;">%</span></p>
-                                            <p class="little-weather">precipitacion</p>
-                                        </div>
-                                        <div style="display: flex; flex-direction: column;align-items: center;">
-                                            <p class="big-weather"><span id="humidity">60</span><span
-                                                    style="font-size: x-small;">%</span></p>
-                                            <p class="little-weather">humidity</p>
-                                        </div>
-                                    </div>
 
-                                </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="down-info">
@@ -200,12 +165,10 @@
                                     <p class="app-name">Phone</p>
                                 </div>
                             </a>
-                            <a href="./music.html" class="transition-fade">
-                                <div class="menu">
-                                    <img src="./img/down-info/radio.svg" width="40px" alt="Radio">
-                                    <p class="app-name">Audio</p>
-                                </div>
-                            </a>
+                            <div class="menu">
+                                <img src="./img/down-info/radio.svg" width="40px" alt="Radio">
+                                <p class="app-name">Audio</p>
+                            </div>
 
                             <a href="./car.html" class="transition-fade">
                                 <div class="menu">
