Fix car info text and continuação música

--- a/music.html
+++ b/music.html
@@ -104,7 +104,13 @@
                     <div id="swup" class="content transition-fade"
                         style="flex-direction: column ; align-items: center;">
                         <div style="height: 50%; width: 90%; display: flex; justify-content: space-between;">
-                            <div class="box" style="height: 95%; width: 45%; "></div>
+                            <div class="box" style="height: 95%; width: 45%; ">
+                                <div
+                                style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
+                                <img src="./img/music/bluetooth.svg" width=45%" alt="Radio">
+                                <p class="little-car">PHONE</p>
+                            </div>
+                            </div>
                             <div class="box" style="height: 95%; width: 45%;">
                                 <div
                                     style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
